--- a/gb/21/7/26/n13117257.md
+++ b/gb/21/7/26/n13117257.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/sbahda331/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/sbahda331/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/sbahda331/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sbahda331/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/sbahda331/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sbahda331/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/sbahda331/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sbahda331/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/sbahda331/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sbahda331/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/sbahda331/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sbahda331/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/sbahda331/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sbahda331/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/sbahda331/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sbahda331/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/sbahda331/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/sbahda331/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/sbahda331/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/sbahda331/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/sbahda331/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/sbahda331/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/sbahda331/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/sbahda331/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【远见快评】疯狂围攻外媒 中共文宣失控？</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2021/07/id13117287-1200800-600x400.jpg" />
-<h6>疯狂围攻外媒，中共文宣失控？（《远见快评》提供）
-</h6>
+<a href="https://d1x2hvndm8f89d.cloudfront.net/R3xbj2K7v"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<h6></h6>
 <hr>
-	<p>【大纪元2021年07月27日讯】朋友们好，今天是7月26日（星期一），欢迎来到《<ahref="https://github.com/sbahda331/djy/blob/master/gb/tag/%E8%BF%9C%E8%A7%81%E5%BF%AB%E8%AF%84.md#1">远见快评</a>》，我是唐靖远。</p>
-<p>先跟大家说个好消息！《<ahref="https://github.com/sbahda331/djy/blob/master/gb/tag/%E8%BF%9C%E8%A7%81%E5%BF%AB%E8%AF%84.md#1">远见快评</a>》的Podcasts上线了，中文叫做播客，现在可以线上听《远见快评》的节目了，欢迎追踪订阅我们，链接我们会放在视频下面的文字介绍中。</p>
-<p>在<ahref="https://github.com/sbahda331/djy/blob/master/gb/tag/%E9%83%91%E5%B7%9E%E6%B4%AA%E7%81%BE.md#1">郑州洪灾</a>大水刚过，哀鸿遍野的时候，追责的问题自然而然成为焦点。其实原本我也没指望郑州官员会受到追责。就像上次和大家讨论过的，可以随意草菅人命而无需担责就是中共体制的最大“优势”。</p>
+	<p>【大纪元2021年07月27日讯】朋友们好，今天是7月26日（星期一），欢迎来到《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%BF%9C%E8%A7%81%E5%BF%AB%E8%AF%84.md#1">远见快评</a>》，我是唐靖远。</p>
+<p>先跟大家说个好消息！《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%BF%9C%E8%A7%81%E5%BF%AB%E8%AF%84.md#1">远见快评</a>》的Podcasts上线了，中文叫做播客，现在可以线上听《远见快评》的节目了，欢迎追踪订阅我们，链接我们会放在视频下面的文字介绍中。</p>
+<p>在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%83%91%E5%B7%9E%E6%B4%AA%E7%81%BE.md#1">郑州洪灾</a>大水刚过，哀鸿遍野的时候，追责的问题自然而然成为焦点。其实原本我也没指望郑州官员会受到追责。就像上次和大家讨论过的，可以随意草菅人命而无需担责就是中共体制的最大“优势”。</p>
 <p>但当这场明显是三分天灾、七分人祸的惨剧的真相才刚刚解开帷幕，大陆舆论场就响起了一片追责的声音，只不过令所有人都错愕不已的是，这些追责的声音并不是要追究犯下渎职罪甚至是谋杀罪的官员们，而是开始围攻、追究海外媒体如何“抹黑”、“造谣”报导郑州惨剧的责任。</p>
 <p>不得不说，这远远超出了很多人的想像，甚至对大陆舆论环境早已见怪不怪的很多大陆媒体人，都难以接受这样的大逆转，不断公开发表声明，说不再关注河南任何与洪灾相关的新闻。</p>
+<p><center><a src=""></a><a href="https://d1x2hvndm8f89d.cloudfront.net/R3xbj2K7v"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/82c86ec2-dc3c-4433-ae7a-34b54c62580f?r=16x9&amp;d=1282" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center></p>
 <h2>外媒记者被围攻事件 网络刷屏</h2>
-<p>今天我们就来说说这个已经成为国际舆论焦点的事件，以及因为<ahref="https://github.com/sbahda331/djy/blob/master/gb/tag/%E4%B8%9C%E4%BA%AC%E5%A5%A5%E8%BF%90.md#1">东京奥运</a>会引发的一系列舆论事件。我们会发现，这些事件之间看起来各不相关，但其实都有某种内在的联系。</p>
+<p>今天我们就来说说这个已经成为国际舆论焦点的事件，以及因为<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%9C%E4%BA%AC%E5%A5%A5%E8%BF%90.md#1">东京奥运</a>会引发的一系列舆论事件。我们会发现，这些事件之间看起来各不相关，但其实都有某种内在的联系。</p>
 <h3>“乘客们被扔在站台上等死”外媒记者遭围攻</h3>
 <p>外媒记者被围攻事件主要涉及到两家媒体，一家是BBC，另一家是德国之声。</p>
 <p>7月22日，BBC记者罗宾?布兰特（Robin Brant）前往郑州报导灾区第一手消息，并实地采访当地民众。尤其对倍受关注的地铁5号线事件，罗宾在一则视频报导中对地铁惨剧究竟是不是人祸提出质疑，在视频下方的中文字幕中，可以看到显示了这样的内容：“一个最令人不安的问题是，为什么在这条地铁线上的一个车站，一个建成还不到10年的地铁系统，会涌入大量雨水，乘客们会被扔在站台上等死。”</p>
@@ -22,7 +22,7 @@
 <h3>官员们等指令 乘客们等死 有佐证</h3>
 <p>这些情况，都是生还者自己的证词讲述的。也有匿名的地铁员工发帖揭露管理部门不敢担责，谁都不敢下停运的命令。对这一点，我们意外的得到了两个很有力的旁证，这是中共总理李克强和浙江省长郑栅洁自己提供的。</p>
 <p>就在今天，李克强主持召开抗洪救灾与防汛工作视频会议，强调在紧急情况下，除特殊行业外应果断停工、停学、停业；对城市地铁、隧道等“宁可过一些，该停就停，该封就封”。</p>
-<p>而浙江省省长郑栅洁则因为<ahref="https://github.com/sbahda331/djy/blob/master/gb/tag/%E5%8F%B0%E9%A3%8E%E2%80%9C%E7%83%9F%E8%8A%B1%E2%80%9D.md#1">台风“烟花”</a>逼近，在7月24日下午前往杭州地铁站等地检查防台工作，然后也特别强调说，遇到突发状况，不能层层等命令，要有第一时间的意识，明确地铁站台、条线、全网各自职责分工等等，要迅速决策，果断处置。</p>
+<p>而浙江省省长郑栅洁则因为<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E9%A3%8E%E2%80%9C%E7%83%9F%E8%8A%B1%E2%80%9D.md#1">台风“烟花”</a>逼近，在7月24日下午前往杭州地铁站等地检查防台工作，然后也特别强调说，遇到突发状况，不能层层等命令，要有第一时间的意识，明确地铁站台、条线、全网各自职责分工等等，要迅速决策，果断处置。</p>
 <p>大家看到了吧？明眼人一眼就能看出，这些话都是参照郑州地铁为范本在讲。</p>
 <h3>困在地铁的人们疯狂拨打求救电话 都不通</h3>
 <p>BBC记者罗宾报导的核心是质疑，为什么一个很现代化的新地铁居然出现如此低级的安全问题，出事前错误决策，出事后让大批乘客等死——大家注意一下，说让乘客等死并不是谁的杜撰，这也是生还者自己讲述的，说困在地铁的人们疯狂拨打各种政府求救电话，但都不通。最后好不容易打通了一个，结果被告知没法救援，你们只能自救。</p>
@@ -31,17 +31,17 @@
 <p>在这样的背景下，发生德国之声记者在郑州街头遭到所谓“爱国群众”围堵甚至差点被殴打，是一点不奇怪的。</p>
 <h3>这几人是否接受官方指令？已造成舆论效果</h3>
 <p>关于德国之声记者被围堵的这个视频，已经在网络上刷屏了，我估计朋友们大多都看到了。从画面中看，参与围攻的战狼群众有男有女，他们要么戴着口罩，要么在视频里不是背影就是侧影，所以很难认定他们的真实身份。</p>
-<p>就这一点，在网络上引发了很大争议，很多人认为这几个人并非普通群众，而是官方安排的便衣或郑州版的“朝阳群众”。这有两个根据：一个是网络盛传官方私下发布了通知，要求<ahref="https://github.com/sbahda331/djy/blob/master/gb/tag/%E4%BA%AC%E5%B9%BF%E8%B7%AF%E9%9A%A7%E9%81%93.md#1">京广路隧道</a>口附近辖区办事处派人挨家挨户警告沿街各商家，不得私自接受国外媒体采访。另一个根据是，几位战狼群众看起来信息准确、目的性极强，与其他正忙于灾后各种事务的民众不太一样。</p>
+<p>就这一点，在网络上引发了很大争议，很多人认为这几个人并非普通群众，而是官方安排的便衣或郑州版的“朝阳群众”。这有两个根据：一个是网络盛传官方私下发布了通知，要求<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BA%AC%E5%B9%BF%E8%B7%AF%E9%9A%A7%E9%81%93.md#1">京广路隧道</a>口附近辖区办事处派人挨家挨户警告沿街各商家，不得私自接受国外媒体采访。另一个根据是，几位战狼群众看起来信息准确、目的性极强，与其他正忙于灾后各种事务的民众不太一样。</p>
 <p>其实，这几个人是否接受了官方指令并不重要，重要的是，这几个人的行为已经成功在短短几分钟的时间内导致了两个后果：</p>
 <p>1. 围攻事件迅速发酵成为各大媒体头条，国际媒体在郑州被打压等于让郑州官方蓄意隐瞒灾情真相不打自招、瞬间就被定格了。</p>
 <p>2. 连国内很多媒体人都实在看不下去，相继公开发表声明，不再关注及转发郑州或河南灾情的任何消息，甚至形成了一股风潮。</p>
 <h3>郑州官方巨大公关灾难?胡编都急了</h3>
-<p>对郑州官方来说，这其实是一个巨大的公关灾难，把国外国内的媒体都得罪了，我还真没见过这么蠢的操作。本来外媒的采访也好、拍摄也好，其实并没有挖到什么真正的猛料，但这一波围攻下来，反倒让郑州地铁与<ahref="https://github.com/sbahda331/djy/blob/master/gb/tag/%E4%BA%AC%E5%B9%BF%E8%B7%AF%E9%9A%A7%E9%81%93.md#1">京广路隧道</a>两大惨剧的曝光度成几何级数上升。</p>
+<p>对郑州官方来说，这其实是一个巨大的公关灾难，把国外国内的媒体都得罪了，我还真没见过这么蠢的操作。本来外媒的采访也好、拍摄也好，其实并没有挖到什么真正的猛料，但这一波围攻下来，反倒让郑州地铁与<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BA%AC%E5%B9%BF%E8%B7%AF%E9%9A%A7%E9%81%93.md#1">京广路隧道</a>两大惨剧的曝光度成几何级数上升。</p>
 <p>如果要套用中共惯用的“抹黑”这个概念，围攻记者事件的“抹黑效应”，恐怕远超这两条报导本身。</p>
 <p>就连《环球时报》的胡编胡锡进都急了眼，发评论声称“强烈不建议各地民众对西方记者个体进行现场围堵”，因为这不但“扭转不了他们的视角和态度”，反而只会让西方媒体因为“受打压”而获得地位抬高，效果适得其反。</p>
 <p>当然，胡编一向以自己能够全方位“叼盘”的专业性自居，因此总觉得郑州这些街道办或基层公安便衣、包括围观起哄民众等等专业度太差，对付海外媒体的手法技术含量太低，对其小不忍则乱大谋有点鄙视的意思。但实际上，这一波煽动仇外情绪的操作，绝不仅仅局限于郑州官方。</p>
 <h2>路透社报导侯志慧 竟引轩然大波</h2>
-<p>7月24日，中国选手侯志慧在<ahref="https://github.com/sbahda331/djy/blob/master/gb/tag/%E4%B8%9C%E4%BA%AC%E5%A5%A5%E8%BF%90.md#1">东京奥运</a>会女子举重49公斤级比赛中，获得一枚金牌，这是中国在本届奥运会的第二枚金牌，本身并无太大特殊意义。然而，谁都没想到的是，路透社关于侯志慧的这条报导，竟然引发轩然大波，原因仅仅是因为侯志慧的配图看起来表情“极不自然”。</p>
+<p>7月24日，中国选手侯志慧在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%9C%E4%BA%AC%E5%A5%A5%E8%BF%90.md#1">东京奥运</a>会女子举重49公斤级比赛中，获得一枚金牌，这是中国在本届奥运会的第二枚金牌，本身并无太大特殊意义。然而，谁都没想到的是，路透社关于侯志慧的这条报导，竟然引发轩然大波，原因仅仅是因为侯志慧的配图看起来表情“极不自然”。</p>
 <p>中共驻斯里兰卡大使馆率先发难，发推大骂路透社说，“在那么多运动会照片中，路透社选择了这张，这只能显示出他们多么丑陋。不要把政治、意识形态加在体育运动之上，也不要再自称是无偏见的媒体组织了。无耻。”</p>
 <p>然后党媒《环球时报》、《光明网》以及各大门户网站也都迅速跟进，集体声讨路透社居心不良，故意用侯志慧举重发力时表情狰狞的照片，来丑化中国形象。</p>
 <p>中共使馆甚至贴出了两张路透社发表的白人运动员表情自然的照片，把这个问题的定性再度拔高，上升到了种族主义的层面，厉声质问是否只有“西方白人更容易得到美好的东西”？</p>
@@ -72,44 +72,38 @@
 <p>责任编辑：李昊?#</p>
 	
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/16/n13094320.md#1">【远见快评】拒与美高层接触 习近平因何反转？</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/19/n13100092.md#1">【远见快评】外籍网红窜起 中共满世界找“斯诺”</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/21/n13105541.md#1">【远见快评】郑州洪灾惨剧 两处人祸制造？</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/23/n13110904.md#1">【远见快评】郑州惨剧不断 祸起书记一句话？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/16/n13094320.md#1">【远见快评】拒与美高层接触 习近平因何反转？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/19/n13100092.md#1">【远见快评】外籍网红窜起 中共满世界找“斯诺”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/21/n13105541.md#1">【远见快评】郑州洪灾惨剧 两处人祸制造？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/23/n13110904.md#1">【远见快评】郑州惨剧不断 祸起书记一句话？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/25/n11213719.md#1" target="_blank">许茹：火灾爆炸频发京城连震 昭示奸佞当道</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/30/n9338788.md#1" target="_blank">一张10年前的病历让湖北仙桃拘留所放人</a></li>
-<hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/21/n9981424.md#1" target="_blank">林辉：中共治下红楼泪 谁解其中味？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/5/n10539350.md#1" target="_blank">中国奥运泳坛明星经历的人生巨变</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/9/n13079158.md#1">【忽必烈传】马可眼中的皇帝与大元帝国</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/20/n13102389.md#1">【未解之谜】预言家凯西：我曾是亚特兰蒂斯人</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/24/n13111358.md#1">【小宇宙传说】时空穿越 他从1958来到2006年</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/12/n13083162.md#1">苏东坡一身忠直正气 自述多次与鬼神谈判</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/21/n13104808.md#1">欧阳修一生奇遇多 常怀疑自己本是世外之人</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/24/n13112643.md#1">【新闻看点】死亡隧道存3谜 江浙沪发196警报</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/24/n13112565.md#1">【财商天下】快速降负债 恒大走出危局？</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/24/n13112826.md#1">【横河观点】习邓都避洪灾？美打击中共猎狐</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/24/n13112629.md#1">台风烟花路径奇异 避开台湾直扑上海浙江</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/24/n13112498.md#1">【一线采访】被拦隧道内 一车三人死里逃生</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/24/n13111538.md#1">腾讯直播奥运开幕式切掉中国队进场 网民崩溃</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/23/n13110984.md#1">吴宗宪接种第一剂疫苗 自曝隔天出现副作用</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/25/n13114539.md#1">50岁吴奇隆体能惊人 节目竞技完胜24岁男星</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/23/n13110829.md#1">《时代革命》团队宣布：影片版权已转到海外</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/24/n13111732.md#1">篠原凉子与市村正亲离婚 两儿监护权归父亲</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/24/n13111390.md#1">《恋人的最后情书》影评：相隔几十年的恋情 也能同时开花结果</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/21/n13105343.md#1">蔬菜别直接放冰箱！专家：这样保存最长久</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/24/n13112330.md#1">高端疫苗安全和保护力未明 专家：施打或仍有2好处</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/22/n13108194.md#1">三高者易得肾脏病？营养师教你护肾饮食法</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/25/n13113232.md#1">被野熊纠缠7天 美国男子在屋顶写SOS获救</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/25/n13113601.md#1">为了保护10岁小主人 加拿大小狗被土狼咬伤</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/11/8/n11641181.md#1">【医案】老天的考卷</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/sbahda331/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/sbahda331/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/26/n13117257.htm">【远见快评】疯狂围攻外媒 中共文宣失控？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/26/n13117257.htm">【远见快评】疯狂围攻外媒 中共文宣失控？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/sbahda331/djy/blob/master/gb/21/7/26/n13117257.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/sbahda331/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/sbahda331/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/sbahda331/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/sbahda331/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sbahda331/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/7/26/n13117257.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
